# GOTY_TOWER_DEFENSE_345

./: .gitignore  CMakeLists.txt  CodeExplenation  Doxyfile  MyGame  README.txt
DebugLogs/: debug_log.txt
MyGame.dSYM/Contents/Resources/Relocations/aarch64/: MyGame.yml
SavedMaps/: AverageMap.txt  HardMap.txt
backup/: Entity.h  Game.cpp  Game.h  Grass_Tile.cpp  Grass_Tile.h  Tower_Defense_1  Tower_Defense_1.cpp
docs/html/: _entity_8cpp.html  _entity_8h.html  _entity_8h.js  _entity_8h_source.html  _game_8cpp.html  _game_8h.html  _game_8h_source.html  _game_events_8h_source.html  _math___helpers_8h_source.html  _monster_8cpp.html  _monster_8h.html  _monster_8h.js  _monster_8h_source.html  _monster___generator_8cpp.html  _monster___generator_8h.html  _monster___generator_8h.js  _monster___generator_8h_source.html  _platform_8h_source.html  _tile_8h_source.html  _tower_8cpp.html  _tower_8h.html  _tower_8h.js  _tower_8h_source.html  _tower___defense__1_8cpp.html  annotated.html  annotated_dup.js  class_entity-members.html  class_entity.html  class_game-members.html  class_game.html  class_game.js  class_i_game_observer-members.html  class_i_game_observer.html  class_i_game_subject-members.html  class_i_game_subject.html  class_monster-members.html  class_monster.html  class_monster_generator-members.html  class_monster_generator.html  class_tile-members.html  (+29 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  files_2.js  files_3.js  functions_0.js  functions_2.js  searchdata.js
docs/latex/: _entity_8cpp.tex  _entity_8h.tex  _entity_8h_source.tex  _game_8cpp.tex  _game_8h.tex  _game_8h_source.tex  _game_events_8h_source.tex  _math___helpers_8h_source.tex  _monster_8cpp.tex  _monster_8h.tex  _monster_8h_source.tex  _monster___generator_8cpp.tex  _monster___generator_8h.tex  _monster___generator_8h_source.tex  _platform_8h_source.tex  _tile_8h_source.tex  _tower_8cpp.tex  _tower_8h.tex  _tower_8h_source.tex  _tower___defense__1_8cpp.tex  annotated.tex  class_entity.eps  class_entity.tex  class_game.tex  class_i_game_observer.tex  class_i_game_subject.tex  class_monster.eps  class_monster.tex  class_monster_generator.tex  class_tile.eps  class_tile.tex  class_tower.eps  class_tower.tex  files.tex  hierarchy.tex  refman.tex  struct_monster_generator_1_1_monster_type_data_1_1_base_stats.tex  struct_monster_generator_1_1_monster_type_data_1_1_golem.tex  struct_monster_generator_1_1_monster_type_data_1_1_minotaur.tex  struct_monster_generator_1_1_monster_type_data_1_1_ogre.tex  (+2 more)
src/: Entity.cpp  Entity.h  Game.cpp  Game.h  GameEventManager.h  GameEvents.h  Math_Helpers.h  Monster.cpp  Monster.h  MonsterView.cpp  MonsterView.h  Monster_Generator.cpp  Monster_Generator.h  MyGame  Observer.h  Platform.h  ProjectileManager.cpp  ProjectileManager.h  Subject.h  Tile.h  Tower.cpp  Tower.h  TowerManager.cpp  TowerManager.h  TowerTargetStrategy.h  TowerView.cpp  TowerView.h  Tower_Defense_1  Tower_Defense_1.cpp  Tower_Defense_1_v2.6.2  Tower_Defense_Game.cpp
src/Entities/: Entity.cpp  Entity.h  MonsterEntity.cpp  MonsterEntity.h  Tile.cpp  Tile.h  TowerEntity.cpp  TowerEntity.h
src/EntityDecorators/: CooldownBoostDecorator.h  DamageBoostDecorator.h  RangeBoostDecorator.h  SpeedBoostDecorator.h  TowerDecorator.h
src/EntityManagers/: MonsterManager.cpp  MonsterManager.h  TowerManager.cpp  TowerManager.h
src/GUI/: Button.h  GUIManager.cpp  GUIManager.h  GameSetup.h  InfoUI.cpp  InfoUI.h  MainMenu.cpp  MainMenu.h  MainMenuDriver.cpp  MainMenuDriver.h  MapSelectionDriver.cpp  MapSelectionDriver.h  MapSetup.cpp  MapSetup.h  Tile.h
src/Generators/: MonsterGenerator.cpp  MonsterGenerator.h  MonsterGeneratorData.h  TowerGenerator.cpp  TowerGenerator.h  TowerGeneratorData.h
src/Helpers/: DebugLogger.h  MapStorage.h  Math_Helpers.h
src/MonsterDecorators/: BurnEffectDecorator.h  MonsterDecorator.cpp  MonsterDecorator.h  SpeedDebuffDecorator.h
src/MyGame.dSYM/Contents/Resources/DWARF/: MyGame
src/MyGame.dSYM/Contents/Resources/Relocations/aarch64/: MyGame.yml
src/Strategies/: TowerTargetStrategies.h  TowerTargetStrategy.h
src/TowerDecorators/: CooldownBoostDecorator.h  DamageBoostDecorator.h  RangeBoostDecorator.h  SpeedBoostDecorator.h  TowerDecorator.h
src/VIews/: GameSetupView.cpp  GameSetupView.h  HealthBarView.cpp  HealthBarView.h  InfoUIView.cpp  InfoUIView.h  MapSetupView.cpp  MapSetupView.h  MonsterEntityView.cpp  MonsterEntityView.h  TowerEntityView.cpp  TowerEntityView.h
